--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>tim740</title>
+  <title>Sashie</title>
   <link rel="icon" type="image/ico" href="img/favicon.ico">
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> </script>
@@ -9,7 +9,7 @@
 <body>
   <div id="header" style="text-align:center;">
       <br>
-      <a href="https://tim740.github.io">
+      <a href="https://sashie.github.io">
         <img src="img/blaze.png" alt="tim740" width="64">
       </a>
     </div>
