--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li><a href="apis.html" target="_blank">API's</a></li>
-          <li><a href="https://github.com/tim740"target="_blank">GitHub</a></li>
-          <li><a href="https://forums.skunity.com/users/tim740" target="_blank">skUnity</a></li>
-          <li><a href="https://forums.spongepowered.org/users/tim740" target="_blank">Sponge</a></li>
-          <li><a href="https://www.spigotmc.org/members/tim740.14719" target="_blank">Spigot</a></li>
-          <li><a href="http://dev.bukkit.org/profiles/tim740" target="_blank">Bukkit</a></li>
+          <li><a href="https://github.com/Sashie"target="_blank">GitHub</a></li>
+          <li><a href="https://forums.skunity.com/users/sashie" target="_blank">skUnity</a></li>
+          <li><a href="https://www.spigotmc.org/members/sashie" target="_blank">Spigot</a></li>
         </ul>
       </div>
     </nav>
@@ -31,37 +28,14 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
-            <i class="glyphicon glyphicon-resize-horizontal"> </i>
-            <h3><a href="https://forums.skunity.com/t/3099?u=tim740" target="_blank">skUtilities</a></h3>
-            <p>Conversions, files and Utility Addon for Skript!</p>
+            <i class="glyphicon glyphicon-fire"> </i>
+            <h3><a href="https://forums.skunity.com/t/2397" target="_blank">skDragon</a></h3>
+            <p>[Addon for Skript] Particle, Emote, DragonTravel Hooks</p>
           </div>
           <div class="col-md-3">
-            <i class="glyphicon glyphicon-pencil"> </i>
-            <h3>SkriptDark</h3>
-            <p>Powerful IDE/UDL for Skirpt!<br><a href="https://forums.skunity.com/t/1751?u=tim740" target="_blank">Atom</a> - <a href="https://forums.skunity.com/t/44?u=tim740" target="_blank">NP++</a></p>
-          </div>
-          <div class="col-md-3">
-            <i class="glyphicon glyphicon-align-justify"> </i>
-            <h3><a href="https://forums.skunity.com/t/40?u=tim740" target="_blank">Latest Aliases</a></h3>
-            <p>Latest Skript aliases updated often with '_' support!</p>
-          </div>
-          <div class="col-md-3">
-            <i class="glyphicon glyphicon-list-alt"> </i>
-            <h3><a href="https://forums.skunity.com/t/36?u=tim740" target="_blank">ClearLag</a></h3>
-            <p>Skript replacement for the original plugin!</p>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-3">
-            <i class="glyphicon glyphicon-search"> </i>
-            <h3><a href="https://forums.skunity.com/t/1154?u=tim740" target="_blank">Spawn Egg Finder</a></h3>
-            <p>View every possible Spawn Egg! (Broken in 1.9)</p>
-          </div>
-          <div class="col-md-3">
-            <i class="glyphicon glyphicon-text-size"> </i>
-            <h3><a href="https://forums.skunity.com/t/38?u=tim740" target="_blank">Text Tester</a></h3>
-            <p>Test text without having to edit a skript!</p>
+            <i class="glyphicon glyphicon-scissors"> </i>
+            <h3><a href="https://forums.skunity.com/t/5971" target="_blank">Skript code snippets</a></h3>
+            <p>Just a few little things, nothing special</p>
           </div>
         </div>
       </div>
