--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Sashie</title>
-  <link rel="icon" type="image/ico" href="img/favicon.ico">
+  <link rel="icon" type="image/ico" href="img/favicon.png">
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> </script>
   <link type="text/css" rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
   <div id="header" style="text-align:center;">
       <br>
       <a href="https://sashie.github.io">
-        <img src="img/blaze.png" alt="tim740" width="64">
+        <img src="img/sunSplashHead.png" alt="sashie" width="72">
       </a>
     </div>
     <nav class="navbar navbar-default">
