--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="header" style="text-align:center;">
       <br>
       <a href="https://sashie.github.io">
-        <img src="img/sunSplashHead.png" alt="sashie" width="72">
+        <img src="img/sunSplashHead2.png" alt="sashie" width="120">
       </a>
     </div>
     <nav class="navbar navbar-default">
