--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="row">
           <div class="col-md-3">
             <i class="glyphicon glyphicon-fire"> </i>
-            <h3><a href="https://forums.skunity.com/t/2397" target="_blank">skDragon</a></h3>
+            <h3><a href="https://forums.skunity.com/t/2397"><font color="F5880C">skDragon</font></a></h3>
             <p>[Addon for Skript] Particle, Emote, DragonTravel Hooks</p>
           </div>
           <div class="col-md-3">
             <i class="glyphicon glyphicon-scissors"> </i>
-            <h3><a href="https://forums.skunity.com/t/5971" target="_blank">Skript code snippets</a></h3>
+            <h3><a href="https://forums.skunity.com/t/5971" target="_blank"><font color="F5880C">Skript code snippets</a></h3>
             <p>Just a few little things, nothing special</p>
           </div>
         </div>
