--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<!--Change your favicon source here!! -->
-        <link rel="icon" type="image/png" href="../portal1update/img/favicon.png" />
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
 		<!--Change the tab title here-->
         <title>Your Title</title>
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Didact+Gothic">
@@ -19,22 +19,22 @@
             
             <div id="logo">
 			<!--Change your logo source here-->
-                <img src="../portal1update/img/logo2.png"alt="Logo"/>
+                <img src="../img/logo2.png"alt="Logo"/>
             </div>
             <div id="server-info">
                 <div id="server-message">
 				<!--Change 'Short Message Here!' here-->
-                 <b> <p>Change this message on line 28 in index.html! </b> </p>
+                 <b> <p>Sashies Projects! </b> </p>
                 </div>
             </div>
             <nav role="navigation">
               <span class="homepage-link">    
                 <ul>
 				<!--Change where each link goes, And the name here-->
-                  <li><a href="../portal1update"><span><font face="Verdana">Forums</font></span></a></li> 
-                  <li><a href="../portal1update"><span>Donate</span></a></li>
-                  <li><a href="../portal1update"><span>Bans</span></a></li>
-                  <li><a href="../portal1update"><span>Events</span></a></li>
+                  <li><a href="../"><span><font face="Verdana">Forums</font></span></a></li> 
+                  <li><a href="../"><span>Donate</span></a></li>
+                  <li><a href="../"><span>Bans</span></a></li>
+                  <li><a href="../"><span>Events</span></a></li>
                 </ul>
               </span>
             </nav>
