--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <div id="logo">
 			<!--Change your logo source here-->
-                <img src="../img/logo2.png"alt="Logo"/>
+                <img src="../img/sunSplashHead2.png"alt="Logo"/>
             </div>
             <div id="server-info">
                 <div id="server-message">
