--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!--Change your favicon source here!! -->
         <link rel="icon" type="image/png" href="../img/favicon.png" />
 		<!--Change the tab title here-->
-        <title>Your Title</title>
+        <title>Sashies Projects</title>
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Didact+Gothic">
         <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">      
