--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 		<!--Dont Touch <3-->
 		<footer role="contentinfo">
             <div id="copyright">
-                <p>Made with ❤ by <a href="../">Yeezy</a></p> 
+                <p>Made with ❤ by Sashie</p>
+                <p>Template by Yeezy</p> 
                 <p></a></p>
            </div>
         </footer>        
