--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                  <b> <p>Sashies Projects! </b> </p>
                 </div>
             </div>
+            <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a> (Not to be confused with skUnity's Discord)</center></div>
             <nav role="navigation">
               <span class="homepage-link">    
                 <ul>
