--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header role="logo/banner">
-            
+            <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a> (Not to be confused with skUnity's Discord)</center></div>
             <div id="logo">
 			<!--Change your logo source here-->
                 <img src="../img/sunSplashHead2.png"alt="Logo"/>
@@ -27,15 +27,14 @@
                  <b> <p>Sashies Projects! </b> </p>
                 </div>
             </div>
-            <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a> (Not to be confused with skUnity's Discord)</center></div>
             <nav role="navigation">
               <span class="homepage-link">    
                 <ul>
 				<!--Change where each link goes, And the name here-->
-                  <li><a href="../"><span><font face="Verdana">Forums</font></span></a></li> 
-                  <li><a href="../"><span>Donate</span></a></li>
-                  <li><a href="../"><span>Bans</span></a></li>
-                  <li><a href="../"><span>Events</span></a></li>
+                  <li><a href="https://forums.skunity.com/t/2397"><span><font face="Verdana">Forums</font></span></a></li> 
+                  <li><a href="https://forums.skunity.com/t/2397"><span>Donate</span></a></li>
+                  <li><a href="https://forums.skunity.com/t/2397"><span>Bans</span></a></li>
+                  <li><a href="https://forums.skunity.com/t/2397"><span>Events</span></a></li>
                 </ul>
               </span>
             </nav>
