--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a> (Not to be confused with skUnity's Discord)</center></div>
             <div id="logo">
 			<!--Change your logo source here-->
-                <img src="../img/logo.png"alt="Logo"/>
+                <img src="../img/logo4.png"alt="Logo"/>
             </div>
             <div id="server-info">
                 <div id="server-message">
 				<!--Change 'Short Message Here!' here-->
-                 <b> <p>Sashies Projects! </b> </p>
+                 <b> <p>Check out this awesome stuff! </b> </p>
                 </div>
             </div>
             <nav role="navigation">
