--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<footer role="contentinfo">
             <div id="copyright">
                 <p>Made with ❤ by Sashie</p>
-                <p>Template by Yeezy</p> 
+                <p>Template by <a href="http://www.mc-market.org/resources/1311/"><span>Yeezy</span></p> 
                 <p></a></p>
            </div>
         </footer>        
