--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul>
 				<!--Change where each link goes, And the name here-->
                   <li><a href="https://forums.skunity.com/t/2397"><span><font face="Verdana">Forums</font></span></a></li> 
-                  <li><a href="https://forums.skunity.com/t/2397"><span>Donate</span></a></li>
+                  <li><a href="https://forums.skunity.com/t/5971"><span>Snippets</span></a></li>
                   <li><a href="https://forums.skunity.com/t/2397"><span>Bans</span></a></li>
                   <li><a href="https://forums.skunity.com/t/2397"><span>Events</span></a></li>
                 </ul>
