--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!--Dont Touch <3-->
 		<footer role="contentinfo">
             <div id="copyright">
-                <p>Made with ❤ by Sashie</p>
+                <p>Made with 🐉 by Sashie</p>
                 <p>Template by <a href="http://www.mc-market.org/resources/1311/"><span>Yeezy</span></p> 
                 <p></a></p>
            </div>
