--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <span class="homepage-link">    
                 <ul>
 				<!--Change where each link goes, And the name here-->
-                  <li><a href="https://forums.skunity.com/t/2397"><span><font face="Verdana">Forums</font></span></a></li> 
+                  <li><a href="https://forums.skunity.com/t/2397"><span><font face="Verdana">skDragon</font></span></a></li> 
+                  <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=F35HPGPTA59ZG&lc=CA&item_name=skDragon&currency_code=CAD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted"><span>Donate</span></a></li>
                   <li><a href="https://forums.skunity.com/t/5971"><span>Snippets</span></a></li>
-                  <li><a href="https://forums.skunity.com/t/2397"><span>Bans</span></a></li>
-                  <li><a href="https://forums.skunity.com/t/2397"><span>Events</span></a></li>
+                  <li><a href="https://forums.skunity.com/t/5971"><span>Snippets</span></a></li>
                 </ul>
               </span>
             </nav>
