--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </head>
     <body>
         <header role="logo/banner">
-            <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a> (Not to be confused with skUnity's Discord)</center></div>
+            <div class="alert alert-info" role="alert"><center><strong>Skript Chat Discord (IRC):</strong> <a href="https://discord.gg/0lx4QhQvwelCZbEX" target="_blank">https://discord.gg/0lx4QhQvwelCZbEX</a></center></div>
+            <div class="alert alert-info" role="alert"><center><strong>skUnity Discord Chat (IRC):</strong> <a href="https://discord.gg/0l3WlzBPKX7R25D5" target="_blank">https://discord.gg/0l3WlzBPKX7R25D5</a></center></div>
             <div id="logo">
 			<!--Change your logo source here-->
                 <img src="../img/logo5.png"alt="Logo"/>
