--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li><a href="https://forums.skunity.com/t/2397"><span><font face="Verdana">skDragon</font></span></a></li> 
                   <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=F35HPGPTA59ZG&lc=CA&item_name=skDragon&currency_code=CAD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted"><span>Donate</span></a></li>
                   <li><a href="https://forums.skunity.com/t/5971"><span>Snippets</span></a></li>
-                  <li><a href="../gallery/index.html"><span>Gallery</span></a></li>
+                  <li><a href="../gallery2/no-jquery.html"><span>Gallery</span></a></li>
                 </ul>
               </span>
             </nav>
