--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<!--Change your favicon source here!! -->
         <link rel="icon" type="image/png" href="../img/favicon.png" />
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Didact+Gothic">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
         <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">      
     </head>
